<resources>
    <string name="app_name">Lab04</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_perfil_usuario">Perfil usuario</string>
    <string name="menu_listado_vuelos">Listado de vuelos</string>
    <string name="menu_listado_mis_vuelos">Mis vuelos</string>
    <string name="menu_logout">Cerrar sesión</string>
</resources>