<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil_usuario"
            android:icon="@drawable/ic_account_box"
            android:title="@string/menu_perfil_usuario" />
        <item
            android:id="@+id/nav_listado_vuelos_activity"
            android:icon="@drawable/ic_list_numbered"
            android:title="@string/menu_listado_vuelos"/>
        <item
            android:id="@+id/nav_listado_compras_activity"
            android:icon="@drawable/ic_airplane"
            android:title="@string/menu_listado_mis_vuelos"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>